--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,14 @@
 streamlit
 pandas
 numpy
-pillow
-opencv-python
-pytesseract
-pymupdf
-azure-ai-formrecognizer
-azure-core
-langchain
-sentence-transformers
-faiss-cpu
-litellm
+Pillow
 plotly
-transformers
-torch
-torchvision
-huggingface-hub
-tiktoken
-requests
-
+langchain
+faiss-cpu
+sentence-transformers
+pytesseract
+opencv-python
+PyMuPDF
+azure-ai-formrecognizer
 litellm
-# langchain-community>=0.0.10
-
-beautifulsoup4
-lxml
-openpyxl
-python-multipart
-aiofiles
 langchain-community
