--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
 streamlit
-pandas
-numpy
-Pillow
-plotly
-langchain
-faiss-cpu
-sentence-transformers
 pytesseract
-opencv-python
-PyMuPDF
-azure-ai-formrecognizer
-litellm
+Pillow
+langchain
 langchain-community
-tesseract
+langchain-huggingface
+qdrant-client
+sentence-transformers
+litellm
+transformers
+torch
